src/objects/APBG_Deal_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>APBG Deal Registrations</relationshipLabel>
        <relationshipName>APBG_Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Account, filtered on Type = Prospect, Customer</description>
        <label>End Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Prospect, Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>APBG Deal Registrations (End Customer)</relationshipLabel>
        <relationshipName>APBG_Deal_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Nbr__c</fullName>
        <label>Partner Contract Nbr</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered lookup on Accounts, Type = Partner, filter required, not optional.</description>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>APBG Deal Registrations</relationshipLabel>
        <relationshipName>APBG_Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_Booking_Amount__c</fullName>
        <description>The Amount from the Associated Opportunity.</description>
        <formula>Associated_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Amount from the Associated Opportunity.</inlineHelpText>
        <label>Pivotal Booking Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APBG_Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Deal_TCV__c</fullName>
        <label>Total Deal TCV</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>for tracking APBG Deal Registrations.</description>
    <label>APBG Deal Registration</label>
    <nameField>
        <displayFormat>APBG-{000000}</displayFormat>
        <label>Alliance Deal Tracker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APBG Deal Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Close_Date__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Partner__c</columns>
        <columns>Partner_Contract_Nbr__c</columns>
        <columns>Pivotal_Booking_Amount__c</columns>
        <columns>Total_Deal_TCV__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All APGB Deal Registations</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>